--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "start": "node src/server.js",
-    "watch": "nodemon src/server.js"
+    "watch": "nodemon src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^4.15.4",
-    "express": "^4.17.1"
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.9",
+    "pm2": "^4.5.6"
   },
   "devDependencies": {
     "jest": "^26.6.3",
