--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/JustinDearden/NASA-Launcher#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "morgan": "^1.10.0"
   }
 }
